--- a/about.html
+++ b/about.html
@@ -19,16 +19,13 @@
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">    
 </head>
 <body style="background-color:#BC061F">
+    <div class="nav-about">
+        <p><a href="home.html">home</a></p>
+        <p><a href="about.html">about</a></p>
+        <p><a href="plumbingservices.html">plumbing services</a></p>
+    </div>
+
 </body>
-<div style="width: 100%; height: 100%; position: relative; background: white">
-    <div style="width: 100%; height: 896px; left: 0px; top: 86px; position: absolute; background: #BC061F"></div>
-    <div style="width: 100%; height: 896px; left: 0px; top: 1938px; position: absolute; background: #5C94FC"></div>
-    <div style="width: 100%; height: 86px; padding-top: 11px; padding-bottom: 11px; padding-left: 51px; padding-right: 135.50px; left: 0px; top: 0px; position: absolute; background: #E03938; justify-content: flex-start; align-items: center; gap: 1015.50px; display: inline-flex">
-        <img style="width: 64px; height: 64px" src="https://via.placeholder.com/64x64" />
-        <div style="justify-content: flex-start; align-items: center; gap: 64px; display: inline-flex">
-            <div style="color: white; font-size: 16px; font-family: Inter; font-weight: 400; word-wrap: break-word"><a href="about.html">about</a></div>
-            <div style="color: white; font-size: 16px; font-family: Inter; font-weight: 400; word-wrap: break-word"><a href="plumbingservices.html">plumbing services</a></div>
-        </div>
     </div>
     <img style="width: 258px; height: 599px; left: 200px; top: 286px; position: absolute" src="https://via.placeholder.com/258x599" />
     <div style="width: 672px; height: 339px; left: 663px; top: 302px; position: absolute; background: white"></div>
