--- a/home.html
+++ b/home.html
@@ -16,26 +16,20 @@
 <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-color: #5C94FC;
-;">
+<body style="background-color: #5C94FC;">
+
     <div class="nav">
         <p><a href="home.html">home</a></p>
         <p><a href="about.html">about</a></p>
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
 
-    <main class="main">
-    <div class="containerTitle">
-        <h2>Meet</h2>
-        <h1 class="h1">Mario</h1>
-        <p>It’s-a-me, Mario! You may know me as the hero with a really cool mustache, but when I'm not saving the Mushroom Kingdom, I’m fixing pipes and solving plumbing problems with my younger brother Luigi.</p>
-        <p>Want to get to know me?</p>
-        <button class="button"><a href="about.html">Let's-a-go</a></button>
-    </div>
-    </main> 
+    <main>
+        hi
+    </main>
 
     <div style="width: 100%; height: 100%; position: relative; background: #5C94FC">
-        <div style="left: 180px; top: 345px; position: absolute; color: #051F51; font-size: 96px; font-family: Press Start 2P; font-weight: 400; word-wrap: break-word">Mario</div>
+        <div style="left: 180px; top: 345px; position: absolute;" class="h1">Mario</div>
         <div style="left: 180px; top: 278px; position: absolute; color: #051F51; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
         <div style="width: 571px; height: 455px; left: 756px; top: 477px; position: absolute">
             <img style="width: 197px; height: 141px; left: 274px; top: 241px; position: absolute" src="https://via.placeholder.com/197x141" />
@@ -75,7 +69,7 @@
                 <div style="width: 94px; height: 94px; left: 51px; top: 362px; position: absolute"></div>
             </div>
         </div>
-        <div style="padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; left: 180px; top: 684px; position: absolute; background: #E03938; justify-content: center; align-items: center; display: inline-flex">
+        <div class="button" style="padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; left: 180px; top: 684px; position: absolute; background: #E03938; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 0px; height: 0px"></div>
             <div style="color: white; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word"><a href="about.html">Let’s-a-go!</a></div>
         </div>
@@ -83,6 +77,7 @@
         <div style="width: 440px; left: 185px; top: 621px; position: absolute; color: white; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Want to get to know me?</div>
         <div style="width: 1512px; height: 86px; padding-top: 11px; padding-bottom: 11px; padding-left: 51px; padding-right: 135.50px; left: 0px; top: 0px; position: absolute; justify-content: flex-start; align-items: center; gap: 1015.50px; display: inline-flex">
             <img style="width: 64px; height: 64px" src="https://via.placeholder.com/64x64" />
+
         </div>
         <div style="width: 160px; height: 20px; left: 1316px; top: 930px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="color: white; font-size: 20px; font-family: Press Start 2P; font-weight: 400; word-wrap: break-word">coins: 0</div>
