--- a/home.html
+++ b/home.html
@@ -17,71 +17,26 @@
 
 </head>
 <body style="background-color: #5C94FC;">
-
     <div class="nav">
         <p><a href="home.html">home</a></p>
         <p><a href="about.html">about</a></p>
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
 
-    <main>
-        hi
-    </main>
-
-    <div style="width: 100%; height: 100%; position: relative; background: #5C94FC">
-        <div style="left: 180px; top: 345px; position: absolute;" class="h1">Mario</div>
-        <div style="left: 180px; top: 278px; position: absolute; color: #051F51; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
-        <div style="width: 571px; height: 455px; left: 756px; top: 477px; position: absolute">
-            <img style="width: 197px; height: 141px; left: 274px; top: 241px; position: absolute" src="https://via.placeholder.com/197x141" />
-            <img style="width: 300px; height: 142px; left: 73px; top: 73px; position: absolute" src="https://via.placeholder.com/300x142" />
-        </div>
-        <img style="width: 409px; height: 563px; left: 880px; top: 308px; position: absolute" src="https://via.placeholder.com/409x563" />
-        <img style="width: 200px; height: 108px; left: 985px; top: 874px; position: absolute" src="https://via.placeholder.com/200x108" />
-        <div style="width: 142px; height: 309px; padding-top: 66px; padding-bottom: 128.46px; padding-left: 24px; padding-right: 24px; left: 864px; top: -11px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
-            <img style="width: 94px; height: 114.54px" src="https://via.placeholder.com/94x115" />
-        </div>
-        <div style="width: 384px; height: 642px; left: 641px; top: 363px; position: absolute">
-            <div style="width: 196px; height: 500px; left: 0px; top: 71px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 77px; height: 93.43px; left: 60px; top: 362px; position: absolute"></div>
+    <div class="main">
+        <div class="grid-parent">
+            <div class="grid-child">
+                <div style="color: #051F51; margin-bottom: 0.5em; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
+                <div class="h1" style="margin-bottom: 0.5em;">Mario</div>  
+                <div style="color: white; font-size: 20px; margin-bottom: 1em; font-family: Inter; font-weight: 400; word-wrap: break-word">It’s-a-me, Mario! You may know me as the hero with a really cool mustache, but when I'm not saving the Mushroom Kingdom, I’m fixing pipes and solving plumbing problems with my younger brother Luigi.</div>
+                <div style="position: relative; color: white; font-size: 20px; margin-bottom: 2em; font-family: Inter; font-weight: 400; word-wrap: break-word">Want to get to know me?</div>
+                <div class="button" style="padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; background: #E03938; justify-content: center; align-items: center; display: inline-flex">
+                    <div style="width: 0px; height: 0px"></div>
+                    <div style="color: white; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word"><a href="about.html">Let’s-a-go!</a></div>
+                </div>
             </div>
-            <div style="width: 196px; height: 500px; left: 94px; top: 71px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 77px; height: 93.43px; left: 60px; top: 362px; position: absolute"></div>
+            <div class="grid-child">
+                <img src="Images/image 3.png">
             </div>
-            <div style="width: 302px; height: 575px; left: 135px; top: -4px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 104px; top: 481px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 77px; height: 93.43px; left: 190px; top: 435px; position: absolute; transform: rotate(180deg); transform-origin: 0 0"></div>
-            </div>
-        </div>
-        <div style="width: 384px; height: 642px; left: 1178px; top: 24px; position: absolute">
-            <div style="width: 196px; height: 500px; left: 94px; top: 71px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 77px; height: 93.43px; left: 60px; top: 362px; position: absolute"></div>
-            </div>
-            <div style="width: 196px; height: 500px; left: 188px; top: 71px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 77px; height: 93.43px; left: 60px; top: 362px; position: absolute"></div>
-            </div>
-            <div style="width: 196px; height: 500px; left: 0px; top: 71px; position: absolute">
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <img style="width: 94px; height: 94px; left: 51px; top: 406px; position: absolute" src="https://via.placeholder.com/94x94" />
-                <div style="width: 94px; height: 94px; left: 51px; top: 362px; position: absolute"></div>
-            </div>
-        </div>
-        <div class="button" style="padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; left: 180px; top: 684px; position: absolute; background: #E03938; justify-content: center; align-items: center; display: inline-flex">
-            <div style="width: 0px; height: 0px"></div>
-            <div style="color: white; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word"><a href="about.html">Let’s-a-go!</a></div>
-        </div>
-        <div style="width: 440px; height: 144px; left: 180px; top: 461px; position: absolute; color: white; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">It’s-a-me, Mario! You may know me as the hero with a really cool mustache, but when I'm not saving the Mushroom Kingdom, I’m fixing pipes and solving plumbing problems with my younger brother Luigi.</div>
-        <div style="width: 440px; left: 185px; top: 621px; position: absolute; color: white; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Want to get to know me?</div>
-        <div style="width: 1512px; height: 86px; padding-top: 11px; padding-bottom: 11px; padding-left: 51px; padding-right: 135.50px; left: 0px; top: 0px; position: absolute; justify-content: flex-start; align-items: center; gap: 1015.50px; display: inline-flex">
-            <img style="width: 64px; height: 64px" src="https://via.placeholder.com/64x64" />
-
-        </div>
-        <div style="width: 160px; height: 20px; left: 1316px; top: 930px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-            <div style="color: white; font-size: 20px; font-family: Press Start 2P; font-weight: 400; word-wrap: break-word">coins: 0</div>
         </div>
     </div>
-</body>
-</html>
