home page elements positioning
almost there

--- a/home.html
+++ b/home.html
@@ -36,7 +36,19 @@
                 </div>
             </div>
             <div class="grid-child">
-                <img src="Images/image 3.png">
+                <div class="clouds">
+                    <img src="Images/Clouds.png">
+                </div>
+                <div class="pipes">
+                    <img src="Images/greenpipe.png">    
+                </div>
+                <div class="blocks">
+                    <img src="Images/Group 3.png" style="position: relative; width: 50%;">
+                    <img src="Images/questionblockblock.png" style="width: 50%">
+                </div>
+                <div class="mario">
+                    <img src="Images/image 3.png" style="width:50%">
+                </div>
             </div>
         </div>
     </div>
