--- a/about.html
+++ b/about.html
@@ -24,3 +24,20 @@
         <p><a href="about.html">about</a></p>
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
+    <div class="main">
+        <div class="grid-parent-about">
+            <div class="grid-child-about">
+                <img src="Images/mariocrosshands.png" style="position: relative; width: 50%;">
+            </div>
+            <div class="grid-child-about">
+                <div class="about-container">
+                    <h2>About Mario</h2>
+                    <p>Mario, the founder and co-owner of Super Mario Bros Plumbing, is a multi-talented man with a love for helping people and adventure. During times of peace in the Mushroom Kingdom, with the help of his brother, Luigi, he makes it a mission to protect the plumbing of people in need throughout New York.</p>
+                </div>
+                <div class="blocks">
+                    <img src="Images/Group 3.png">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
