--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
 
-    <div class="main">
+    <div class="hero">
         <div class="grid-parent">
             <div class="grid-child">
                 <div style="color: #051F51; margin-bottom: 0.5em; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
@@ -37,15 +37,15 @@
             </div>
             <div class="grid-child">
                 <div class="coin">
-                    <img src="Images/coin.png" position:>
+                    <img src="Images/coin.png">
                 </div>
                 <div class="blocks-top-right"> 
-                    <img src="Images/questionblockblock.png" style="width: 50%">
+                    <img src="Images/questionblockblock.png">
                 </div>
                 <div class="clouds">
                     <img src="Images/Clouds.png">
                 </div>
-                <div class="blocks-bottom-left">
+                  <div class="blocks-bottom-left">
                     <img src="Images/Group 3.png" style="position: relative; width: 50%;">
                 </div>
                 <div class="pipes">
