renamed home to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body style="background-color: #5C94FC;">
     <div class="nav">
-        <p><a href="home.html">home</a></p>
+        <p><a href="index.html">home</a></p>
         <p><a href="about.html">about</a></p>
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
@@ -35,7 +35,7 @@
                     <div style="color: white; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word"><a href="about.html">Let’s-a-go!</a></div>
                 </div>
             </div>
-            <div class="grid-child">
+            <div class="grid-child-right">
                 <div class="coin">
                     <img src="Images/coin.png">
                 </div>
