--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 </head>
 <body style="background-color:#BC061F">
     <div class="nav-about">
-        <p><a href="home.html">home</a></p>
+        <p><a href="index.html">home</a></p>
         <p><a href="about.html">about</a></p>
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
