home old version

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>About</title>
         <link rel="stylesheet" href="style.css/stylesheet.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,19 +25,12 @@
         <p><a href="plumbingservices.html">plumbing services</a></p>
     </div>
     <div class="main">
-        <div class="grid-parent-about">
-            <div class="grid-child-about">
+        <div class="sidebyside">
                 <img src="Images/mariocrosshands.png" style="position: relative; width: 50%;">
-            </div>
-            <div class="grid-child-about">
                 <div class="about-container">
                     <h2>About Mario</h2>
                     <p>Mario, the founder and co-owner of Super Mario Bros Plumbing, is a multi-talented man with a love for helping people and adventure. During times of peace in the Mushroom Kingdom, with the help of his brother, Luigi, he makes it a mission to protect the plumbing of people in need throughout New York.</p>
                 </div>
-                <div class="blocks">
-                    <img src="Images/Group 3.png">
-                </div>
-            </div>
         </div>
     </div>
 </body>
