about page done

--- a/index.html
+++ b/index.html
@@ -24,36 +24,18 @@
     </div>
 
     <div class="hero">
-        <div class="grid-parent">
-            <div class="grid-child">
-                <div style="color: #051F51; margin-bottom: 0.5em; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
+            <div class = "left">
+                <div class="h2" style="color: #051F51; margin-bottom: 0.5em; font-size: 36px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Meet</div>
                 <div class="h1" style="margin-bottom: 0.5em;">Mario</div>  
                 <div style="color: white; font-size: 20px; margin-bottom: 1em; font-family: Inter; font-weight: 400; word-wrap: break-word">It’s-a-me, Mario! You may know me as the hero with a really cool mustache, but when I'm not saving the Mushroom Kingdom, I’m fixing pipes and solving plumbing problems with my younger brother Luigi.</div>
                 <div style="position: relative; color: white; font-size: 20px; margin-bottom: 2em; font-family: Inter; font-weight: 400; word-wrap: break-word">Want to get to know me?</div>
-                <div class="button" style="padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; background: #E03938; justify-content: center; align-items: center; display: inline-flex">
-                    <div style="width: 0px; height: 0px"></div>
-                    <div style="color: white; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word"><a href="about.html">Let’s-a-go!</a></div>
-                </div>
+                <button class="button"><a href="about.html">Let’s-a-go!</a></button>
             </div>
-            <div class="grid-child-right">
-                <div class="coin">
-                    <img src="Images/coin.png">
-                </div>
-                <div class="blocks-top-right"> 
-                    <img src="Images/questionblockblock.png">
-                </div>
-                <div class="clouds">
-                    <img src="Images/Clouds.png">
-                </div>
-                  <div class="blocks-bottom-left">
-                    <img src="Images/Group 3.png" style="position: relative; width: 50%;">
-                </div>
-                <div class="pipes">
-                    <img src="Images/greenpipe.png">    
-                </div>
-                <div class="mario">
-                    <img src="Images/image 3.png" style="width:50%">
-                </div>
+            
+            <div>
+                <img class="mario" src="Images/image.png" alt = "mario">
             </div>
-        </div>
-    </div>
+       
+
+
+</body>
