--- a/plumbingservices.html
+++ b/plumbingservices.html
@@ -18,101 +18,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">    
     </head>
-    <body>
-    <div style="width: 100%; height: 100%; position: relative; background: white">
-        <div style="width: 1512px; height: 2618px; left: 0px; top: 1010px; position: absolute; background: linear-gradient(180deg, white 26%, rgba(127.50, 191.50, 195.50, 0.62) 89%, rgba(0, 128, 136, 0.25) 100%)"></div>
-        <div style="width: 1512px; height: 851px; left: 0px; top: 159px; position: absolute"></div>
-        <div style="left: 485px; top: 1109px; position: absolute; color: #025C62; font-size: 40px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Why choose the Mario Bros?</div>
-        <div style="width: 378px; height: 411px; padding-left: 57px; padding-right: 57px; padding-top: 53px; padding-bottom: 53px; left: 114px; top: 1247px; position: absolute; background: #FB6C00; box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.25); border-radius: 32px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
-            <div style="width: 166.21px; height: 189px; position: relative">
-                <div style="width: 81.24px; height: 81.24px; left: 71.47px; top: 14.87px; position: absolute; transform: rotate(-10.54deg); transform-origin: 0 0">
-                    <div style="width: 0px; height: 74.47px; left: 40.62px; top: 3.39px; position: absolute; border: 4px white solid"></div>
-                    <div style="width: 40.62px; height: 47.39px; left: 20.31px; top: 16.93px; position: absolute; border: 4px white solid"></div>
-                </div>
-                <div style="width: 142.09px; height: 142.09px; left: 0px; top: 46.91px; position: absolute">
-                    <div style="width: 116.53px; height: 118.41px; left: 11.84px; top: 11.84px; position: absolute; border: 4px white solid"></div>
-                </div>
-            </div>
-            <div style="width: 261px; text-align: center; color: white; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Honest, Upfront Pricing</div>
-        </div>
-        <div style="width: 378px; height: 411px; padding-left: 57px; padding-right: 57px; padding-top: 53px; padding-bottom: 53px; left: 567px; top: 1247px; position: absolute; background: #FB6C00; box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.25); border-radius: 32px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
-            <div style="width: 200px; height: 200px; position: relative">
-                <div style="width: 166.67px; height: 162.50px; left: 16.67px; top: 16.67px; position: absolute">
-                    <div style="width: 166.67px; height: 162.50px; left: 0px; top: 0px; position: absolute">
-                        <div style="width: 166.67px; height: 42.68px; left: 0px; top: 119.82px; position: absolute; border: 2px white solid"></div>
-                        <div style="width: 108.33px; height: 129.17px; left: 29.17px; top: 0px; position: absolute; background: white; border: 2px white solid"></div>
-                        <div style="width: 41.67px; height: 41.67px; left: 62.50px; top: 33.33px; position: absolute; background: black; border: 2px black solid"></div>
-                    </div>
-                    <div style="width: 200px; height: 200px; left: -16.67px; top: -16.67px; position: absolute; background: white"></div>
-                </div>
-            </div>
-            <div style="width: 261px; text-align: center; color: white; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Locally Owned and Operated</div>
-        </div>
-        <div style="width: 378px; height: 411px; padding-left: 57px; padding-right: 57px; padding-top: 53px; padding-bottom: 53px; left: 1023px; top: 1247px; position: absolute; background: #FB6C00; box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.25); border-radius: 32px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
-            <div style="width: 200px; height: 200px; position: relative">
-                <div style="width: 156.29px; height: 158.71px; left: 33.33px; top: 16.67px; position: absolute; background: white"></div>
-            </div>
-            <div style="width: 354px; text-align: center; color: white; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Satisfaction Guaranteed</div>
-        </div>
-        <img style="width: 590px; height: 676px; left: 722px; top: 1828px; position: absolute" src="https://via.placeholder.com/590x676" />
-        <img style="width: 281px; height: 668px; left: 1174px; top: 1896px; position: absolute" src="https://via.placeholder.com/281x668" />
-        <div style="width: 521px; left: 114px; top: 2096px; position: absolute"><span style="color: black; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">All your plumbing needs </span><span style="color: #025C62; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">covered</span></div>
-        <div style="width: 449px; left: 118px; top: 2178px; position: absolute"><span style="color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">We offer a wide variety of services:<br/></span><span style="color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">For clients throughout New York State<br/>24-hour emergency plumbing<br/>Leak detection and repair<br/>Water heater installation, and repair<br/>Drain cleaning<br/>Gas testing</span></div>
-        <div style="width: 573px; height: 284px; left: 778px; top: 2362px; position: absolute">
-            <div style="width: 573px; height: 284px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 31px"></div>
-            <div style="left: 50px; top: 35px; position: absolute; color: #025C62; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Lucia Garzon</div>
-            <div style="width: 454px; left: 50px; top: 92px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Great plumbers to work with. I needed a leak fixed and the Mario bros were on it. They had reasonable prices, were able to schedule soon, and showed up on time. They’re good workers and good, friendly people.</div>
-            <div style="width: 80px; height: 16px; left: 247px; top: 227px; position: absolute; justify-content: flex-start; align-items: center; gap: 16px; display: inline-flex">
-                <div style="width: 16px; height: 16px; background: #025C62; border-radius: 9999px"></div>
-                <div style="width: 16px; height: 16px; background: #D9D9D9; border-radius: 9999px"></div>
-                <div style="width: 16px; height: 16px; background: #D9D9D9; border-radius: 9999px"></div>
-            </div>
-        </div>
-        <div style="width: 1512px; height: 383px; left: 0px; top: 3714px; position: absolute">
-            <div style="width: 1512px; height: 383px; left: 0px; top: 0px; position: absolute; background: #008088"></div>
-            <div style="left: 79px; top: 283px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">© 2024 Super Mario Bros Plumbing. All rights reserved.</div>
-            <div style="left: 79px; top: 66px; position: absolute; color: black; font-size: 40px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">SMB Plumbing</div>
-        </div>
-        <div style="width: 1512px; height: 126px; left: 0px; top: 3588px; position: absolute">
-            <div style="width: 1512px; height: 126px; left: 0px; top: 0px; position: absolute; background: black"></div>
-            <div style="left: 81px; top: 42px; position: absolute; color: white; font-size: 32px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Need plumbing help?</div>
-            <div style="padding-left: 20px; padding-right: 20px; padding-top: 10px; padding-bottom: 10px; left: 1254px; top: 40px; position: absolute; background: #FB6C00; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
-                <div style="color: black; font-size: 20px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Schedule Now</div>
-            </div>
-        </div>
-        <img style="width: 1297px; height: 717px; left: 108px; top: 2744px; position: absolute" src="https://via.placeholder.com/1297x717" />
-        <div style="left: 79px; top: 3882px; position: absolute; justify-content: flex-start; align-items: center; gap: 12px; display: inline-flex">
-            <div style="width: 24px; height: 24px; position: relative">
-                <div style="width: 19.89px; height: 19.93px; left: 2.11px; top: 2px; position: absolute; border: 2px black solid"></div>
-            </div>
-            <div><span style="color: black; font-size: 16px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Call </span><span style="color: black; font-size: 16px; font-family: ADLaM Display; font-weight: 400; text-decoration: underline; word-wrap: break-word">929-556-2746</span></div>
-        </div>
-        <div style="left: 312px; top: 3882px; position: absolute; justify-content: flex-start; align-items: center; gap: 12px; display: inline-flex">
-            <div style="width: 24px; height: 24px; position: relative">
-                <div style="width: 20px; height: 16px; left: 2px; top: 4px; position: absolute; border: 2px black solid"></div>
-                <div style="width: 20px; height: 7px; left: 2px; top: 6px; position: absolute; border: 2px black solid"></div>
-            </div>
-            <div><span style="color: black; font-size: 16px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Email </span><span style="color: black; font-size: 16px; font-family: ADLaM Display; font-weight: 400; text-decoration: underline; word-wrap: break-word">mario@smbplumbing.com</span></div>
-        </div>
-        <div style="width: 1512px; height: 159px; left: 0px; top: 0px; position: absolute; background: black">
-            <div style="left: 378px; top: 102px; position: absolute; justify-content: center; align-items: flex-start; gap: 58px; display: inline-flex">
-                <div style="color: white; font-size: 16px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">REQUEST A SERVICE</div>
-                <div style="align-self: stretch; justify-content: flex-start; align-items: center; gap: 12px; display: inline-flex">
-                    <div style="width: 24px; height: 24px; position: relative">
-                        <div style="width: 19.89px; height: 19.93px; left: 2.11px; top: 2px; position: absolute; border: 2px white solid"></div>
-                    </div>
-                    <div><span style="color: white; font-size: 16px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Call </span><span style="color: white; font-size: 16px; font-family: ADLaM Display; font-weight: 400; text-decoration: underline; word-wrap: break-word">929-556-2746</span></div>
-                </div>
-                <div style="align-self: stretch; justify-content: flex-start; align-items: center; gap: 12px; display: inline-flex">
-                    <div style="width: 24px; height: 24px; position: relative">
-                        <div style="width: 20px; height: 16px; left: 2px; top: 4px; position: absolute; border: 2px white solid"></div>
-                        <div style="width: 20px; height: 7px; left: 2px; top: 6px; position: absolute; border: 2px white solid"></div>
-                    </div>
-                    <div><span style="color: white; font-size: 16px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">Email </span><span style="color: white; font-size: 16px; font-family: ADLaM Display; font-weight: 400; text-decoration: underline; word-wrap: break-word">mario@smbplumbing.com</span></div>
-                </div>
-            </div>
-            <div style="left: 616px; top: 18px; position: absolute; color: #008088; font-size: 40px; font-family: ADLaM Display; font-weight: 400; word-wrap: break-word">SMB Plumbing</div>
-        </div>
-    </div>
+<body>
+    <iframe width="8em" src="https://www.youtube.com/embed/pu57M7cjSD4?si=d67GvP32ORHX7wiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
