added image to about page

--- a/about.html
+++ b/about.html
@@ -50,23 +50,31 @@
     </div>
     <div class="coins">
         <div class="left">
-            <img src="Images/Coingroup.png" width="100%">
+            <img src="Images/Coingroup.png" min-width="40%" width="100%">
         </div>
         <div class="right">
             <img src="Images/Coingroup.png" width="100%">
         </div>
     </div>
     <div class="container">
-        <h2>Fun Facts</h2>
-        <p>When I’m not chasing down Koopas or jumping on Goombas, I enjoy racing karts, playing sports with friends, and of course, plumbing!</p>
-            
-        <p><b>Hobbies:</b> Kart racing, tennis, golf, and sometimes taking a well-deserved nap.</p>
-        <p><b>Favorite Foods:</b> Mushrooms and pasta!</p>
-        <p><b>Favorite Power-Up:</b> Super Star—nothing beats being invincible!</p>
-        <p><b>Favorite Color:</b> Red— the color of passion!</p>
-        <p><b>Best Friend:</b> Luigi!</p>
-        <p><b>Life Goal:</b> To help and protect the people around me.</p>
-        <br>
+        <div class="sidebyside">
+            <div class="text">
+                <h2>Fun Facts</h2>
+
+                <p>When I’m not chasing down Koopas or jumping on Goombas, I enjoy racing karts, playing sports with friends, and of course, plumbing!</p>
+                <p><b>Hobbies:</b> Kart racing, tennis, golf, and sometimes taking a well-deserved nap.</p>
+                <p><b>Favorite Foods:</b> Mushrooms and pasta!</p>
+                <p><b>Favorite Power-Up:</b> Super Star—nothing beats being invincible!</p>
+                <p><b>Favorite Color:</b> Red— the color of passion!</p>
+                <p><b>Best Friend:</b> Luigi!</p>
+                <p><b>Life Goal:</b> To help and protect the people around me.</p>
+            </div>
+            <div class="img">
+                <img src="Images/mariowithcubeinhand.png" width="100%">
+            </div>
+        </div>
+        </div>       
+       
     </div>
     <div class="container-title">
         <h2>Favorite Catchphases</h2></div>
