--- a/plumbingservices.html
+++ b/plumbingservices.html
@@ -19,11 +19,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">    
     </head>
-<body style="background: linear-gradient(180deg, #FFF 25.67%, rgba(128, 191, 195, 0.63) 88.67%, rgba(0, 128, 136, 0.25) 100%);
-;">    
+<body style="background-color: bisque;">
 
 <div class="smb-nav-bar">
-    <h3>SMB Plumbing</h3>
+    <h3 class="h3-smb">SMB Plumbing</h3>
     <div class="row">
         <h4>Request a Service</h4>
         <div class="icons">
@@ -33,7 +32,7 @@
             <h4>Call <u>929-556-2746</u></h4>
         </div>
         <div class="icons">
-            <svg xmlns="http://www.w3.org/2000/svg" margin-right="-12px" width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M22 6L12 13L2 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
@@ -42,16 +41,48 @@
     </div>
 </div>
 
-<h3>Why choose the Mario Brothers?</h3>
-<div class="cardholder">
-    <div class="card">
-        <img src="Images/upfrontpricing.png">
-        <h4>Honest, Upfront Pricing</h4>
+<iframe width="100%" height="600" src="https://www.youtube.com/embed/pu57M7cjSD4?si=jgQgpvhHHhoaYo3L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<div class="container-plumbing"><h3>Why choose the Mario Brothers?</h3>
+    <div class="cardholder">
+        <div class="card">
+            <img src="Images/upfrontpricing.png">
+            <h4>Honest, Upfront Pricing</h4>
+        </div>
+        <div class="card">
+            <img src="Images/local.png">
+            <h4>Locally Owned and Operated</h4>
+        </div>
+        <div class="card">
+            <img src="Images/customersatisfaction.png">
+            <h4>Satisfaction Guaranteed</h4>
+        </div>
     </div>
-    <div class="card"></div>
-    <div class="card"></div>
-
 </div>
+<div class="container-plumbing">
+    <div class="sidebyside">
+        <div class="text">
+            <h3>All your plumbing needs covered</h3>
 
+            We offer a wide variety of services for clients throughout New York State
+
+           <ul>
+            <li>24-hour emergency plumbing</li>
+            <li>Leak detection and repair</li>
+            <li>Water heater installation, and repair</li>
+            <li>Drain cleaning</li>
+            <li>Gas testing</li>
+        </ul>
+        </div>
+        <div class="image">
+            <img src="Images/mariowrenchandbgphoto.png" margin="2em" width="100%">
+        </div>
+    </div>
+</div>
+<div class="reviews">
+    <img src="Images/lucia review.png" width="50%">
+    <img src="Images/seth review.png" width="50%">
+    <img src="Images/jocelyn review.png" width="50%">
+</div>
 </body>
 </html>
