fixed schedule now div and footer of about page

--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
 
 <body style="background-color:#BC061F">
     <div class="nav-about">
-        <p><a href="index.html">home</a></p>
-        <p><a href="about.html">about</a></p>
-        <p><a href="plumbingservices.html">plumbing services</a></p>
+        <p><a href="index.html">Home</a></p>
+        <p><a href="about.html">About</a></p>
+        <p><a href="plumbingservices.html">Plumbing Services</a></p>
     </div>
     <div class="main">
         <div class="sidebyside">
@@ -85,8 +85,7 @@
     <div class ="container-plumbing-ad">
         <h2>Check out my plumbing services!</h2>
         <button class="button"><a href="plumbingservices.html">Let’s-a-go!</a></button>
-        <img class="ad" src="Images/mario running.png">
-    </div>
     <div>
-    </div>
+    <img id="ad" src="Images/mario runningw:oredbg.png" style="margin-bottom: 0;">
+
 </body>
