--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body style="background-color: #5C94FC;">
     <div class="nav">
-        <p><a href="index.html">home</a></p>
-        <p><a href="about.html">about</a></p>
-        <p><a href="plumbingservices.html">plumbing services</a></p>
+        <p><a href="index.html">Home</a></p>
+        <p><a href="about.html">About</a></p>
+        <p><a href="plumbingservices.html">Plumbing Services</a></p>
     </div>
 
     <div class="hero">
@@ -35,7 +35,7 @@
             <div>
                 <img class="mario" src="Images/image.png" alt = "mario">
             </div>
-       
+    
 
 
 </body>
