--- a/plumbingservices.html
+++ b/plumbingservices.html
@@ -80,11 +80,12 @@
     </div>
 </div>
 <div class="container-plumbing">
-    <img src="Images/photo.png" width="100%">
+    <img src="Images/photo.png" width="60%">
 </div>
 <div class="schedule-service">
-    <p style="color:white">Need plumbing help?</p>
-    <button class="button-schedule">Schedule Now</button>
+    <div class="left"> <p style="color:white">Need plumbing help?</p></div>
+   <div class="right">    <button class="button-schedule">Schedule Now</button>
+   </div>
 </div>
 
 <div class="footer">
