--- a/plumbingservices.html
+++ b/plumbingservices.html
@@ -83,7 +83,7 @@
     <img src="Images/photo.png" width="60%">
 </div>
 <div class="schedule-service">
-    <div class="left"> <p style="color:white">Need plumbing help?</p></div>
+    <div class="left1"> <p style="color:white">Need plumbing help?</p></div>
    <div class="right">    <button class="button-schedule">Schedule Now</button>
    </div>
 </div>
